# docrane

./: .gitignore  LICENSE  README.md  requirements.txt  setup.cfg  setup.py
deploy/: README.md
deploy/ubuntu/: supervisor_single_node.sh
docrane/: __init__.py  container.py  exceptions.py  main.py  util.py  watcher.py
etcdocker/: __init__.py  container.py  main.py  util.py  watcher.py
images/: logo.xcf
