[metadata]
name = docrane 
summary = Manage docker container runtime configuration with etcd
description-file =
    README.md
author = Jacob Godin
author-email = jacobgodin@gmail.com 
home-page = https://github.com/CloudBrewery/docrane
classifier =
    Intended Audience :: Developers 
    Intended Audience :: System Administrators
    License :: OSI Approved :: MIT License
    Operating System :: POSIX :: Linux
    Programming Language :: Python
    Programming Language :: Python :: 2.7

[files]
packages =
	docrane

[entry_points]
console_scripts =
    docrane = docrane.main:main

[wheel]
univeral = 1
